# MultiProxy

./: .gitignore  README.md  main.py  pyproject.toml
docs/: firewall.md  plugin_system.md
src/proxy/: __init__.py  config-server.py  config.yaml  pac_server.py.py  plugin_base.py  plugin_manager.py  server.py  shell.py
src/proxy/plugins/: __init__.py  firewall.py  firewall_config.py  firewall_shell.py
