[project]
name = "multiproxy"
version = "0.1.0"
description = "Asynchronous HTTP(S) proxy server with a modular plugin system"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Core dependencies
dependencies = [
    # needed by the FirewallConfig plugin
    "PyYAML>=5.4",
    # uvloop is optional; install for faster event loop performance
    "uvloop>=0.21.0; sys_platform == 'linux'",
]

# CLI entry points
[project.scripts]
proxy-server = "proxy.server:main"
proxy-shell = "proxy.shell:main"

[tool.setuptools]
# Tell setuptools that source files live under src/
package-dir = { "" = "src" }
include-package-data = true

# Automatically discover all Python packages under src/
[tool.setuptools.packages.find]
where = ["src"]
